# taiga-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mise.toml  pyproject.toml
.github/workflows/: release.yml
docs/plans/: 2026-06-05-taiga-mcp-server.md
docs/superpowers/plans/: 2026-07-02-taiga-create-update-tools.md
docs/superpowers/specs/: 2026-07-02-taiga-mcp-create-update-tools-design.md
scripts/: smoke_test.py
src/taiga_mcp/: auth.py  client.py  models.py  server.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_tools.py
