[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taiga-mcp"
version = "1.0.0"
description = "MCP server exposing Taiga project management — projects, epics, stories, tasks, and sprints — as tools for MCP clients like Claude Code"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
taiga-mcp = "taiga_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taiga_mcp"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
